summaries/foundation/errors.txt
❌ python ERROR [2025-09-01 08:59:28 AM EDT]:
  File "/home/runner/work/baseball_for_mat/baseball_for_mat/scripts/fix_inputs_inject_stolen_base_pct.py", line 160
    '''
    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 191)

---

